# Test-App-Flask

./: Dockerfile  Exceptions.py  app.py  models.py  pyproject.toml  requirements.txt  routes.py  run.py  utils.py
app/: __init__.py
instance/: testuser.db
migrations/versions/: 7806c5192e16_.py
models/Appointment/: appointment_model.py
models/Availability/: availability_model.py
models/Department/: department_model.py
models/Reimbursement/: reimbursement_model.py
models/User/: user_model.py
presentation/: AdminBlueprint.py  auth.py  department.py  reimbursement.py
presentation/admin/: admin_department.py
presentation/doctor/: doctor_availability.py
presentation/member/: member_appointment.py
repository/appointment/: AppointmentModel.py  AppointmentRepo.py
repository/availability/: AvailabilityModel.py  AvailabilityRepo.py
repository/department/: DepartmentModel.py  DepartmentRepo.py
repository/reimbursement/: ReimbursementModel.py  ReimbursementRepo.py
repository/user/: UserRepo.py  UserRepoModel.py
schema/availability/: AvailabilitySchema.py
schema/department/: departmentSchema.py
schema/reimbursement/: ReimbursementSchema.py
services/: admin_services.py  appointment_service.py  auth_services.py  availability_service.py  reimbursement_serivce.py
static/css/: main.css
templates/: add_department.html  admin_dashboard.html  base.html  doctor_dashboard.html  index.html  login.html  member_dashboard.html  signup.html  update_department.html
